# openai-models

./: Cargo.toml  Readme.md
examples/agent/: file.rs  main.rs
src/: agent.rs  error.rs  lib.rs  llm.rs  tool.rs
src/tools/: file.rs
