[package]
name = "openai-models"
version = "0.3.1"
edition = "2021"
description = "LLM Utils for clap and billing"
license = "GPL-2.0-only"
readme = "Readme.md"

[dependencies]
derive_more = { version = "1.0.0", features = ["display"] }
serde = { version = "1.0", features = ["derive"] }
clap = {version = "4.5", features = ["derive", "env"]}
log = "0.4"
thiserror = "2.0"
tokio = {version = "1.0"}
color-eyre = "0.6"
async-openai = {version = "0.27"}
serde_json = "1.0"