[package]
name = "openai-models"
version = "0.3.3"
edition = "2024"
description = "LLM Utils for clap and billing"
license = "GPL-2.0-only"
readme = "Readme.md"

[dependencies]
derive_more = { version = "1.0.0", features = ["display"] }
serde = { version = "1.0", features = ["derive"] }
clap = {version = "4.5", features = ["derive", "env"]}
log = "0.4"
thiserror = "2.0"
tokio = {version = "1.0", features = ["full"]}
color-eyre = "0.6"
async-openai = {version = "0.28"}
serde_json = "1.0"
schemars = "0.9.0"
itertools = "0.14.0"
tuple_list = "0.1.3"
libafl_bolts = "0.15.2"
hxd = "0.1.3"
tokio-stream = { version = "0.1.17", features = ["full"] }

[dev-dependencies]
env_logger = "0.11.8"


[[example]]
name = "agent"
